[gd_scene load_steps=25 format=2]

[ext_resource path="res://scenes/levels/games/minigame/joystick.gd" type="Script" id=1]
[ext_resource path="res://scenes/levels/games/minigame/new_tiles.tres" type="TileSet" id=2]
[ext_resource path="res://sprites/ui/mobile_thumbstick.png" type="Texture" id=3]
[ext_resource path="res://sprites/ui/mobile_joystick.png" type="Texture" id=4]
[ext_resource path="res://sprites/ui/border_bw.png" type="Texture" id=5]
[ext_resource path="res://scenes/levels/games/minigame/chunks/house.gd" type="Script" id=6]
[ext_resource path="res://sprites/minigame/bookcase.png" type="Texture" id=7]
[ext_resource path="res://sprites/minigame/spikes.png" type="Texture" id=8]

[sub_resource type="CircleShape2D" id=27]
radius = 64.0

[sub_resource type="DynamicFontData" id=1]
antialiased = false
font_path = "res://fonts/HungryPro.ttf"

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=4]
antialiased = false
font_path = "res://fonts/HungryPro.ttf"

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = SubResource( 4 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.207843, 0.0901961, 0.239216, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.133333, 0, 0.172549, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.780392, 0, 1, 1 )

[sub_resource type="DynamicFontData" id=45]
font_path = "res://fonts/zpix.ttf"

[sub_resource type="DynamicFont" id=46]
size = 12
font_data = SubResource( 45 )

[sub_resource type="RectangleShape2D" id=47]
extents = Vector2( 4, 5 )

[sub_resource type="RectangleShape2D" id=48]
extents = Vector2( 5, 5 )

[sub_resource type="RectangleShape2D" id=49]
extents = Vector2( 8.98099, 10 )

[sub_resource type="RectangleShape2D" id=50]
extents = Vector2( 5, 5 )

[sub_resource type="RectangleShape2D" id=51]
extents = Vector2( 5, 5 )

[node name="house" type="Node2D"]
script = ExtResource( 6 )

[node name="joystick" type="CanvasLayer" parent="."]
script = ExtResource( 1 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="joystick"]
visible = false
modulate = Color( 1, 1, 1, 0.145098 )
normal = ExtResource( 4 )
shape = SubResource( 27 )
visibility_mode = 1

[node name="touch sprite" type="Sprite" parent="joystick"]
visible = false
position = Vector2( 32, 32 )
texture = ExtResource( 3 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="restart" type="Control" parent="HUD"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="HUD/restart"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.121569, 0.0980392, 0.0980392, 0.564706 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/restart"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -286.0
margin_top = -94.0
margin_right = 286.0
margin_bottom = 94.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="HUD/restart/VBoxContainer"]
margin_right = 572.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 2 )
text = "SORRY, YOU DIDN'T SUCCEED."
align = 1
valign = 1

[node name="fun text" type="Label" parent="HUD/restart/VBoxContainer"]
margin_top = 57.0
margin_right = 572.0
margin_bottom = 76.0
custom_colors/font_color = Color( 0, 1, 0.823529, 1 )
custom_fonts/font = SubResource( 6 )
text = "try again, joe is counting on you!"
align = 1

[node name="restart" type="Button" parent="HUD/restart/VBoxContainer"]
margin_top = 86.0
margin_right = 572.0
margin_bottom = 133.0
focus_mode = 0
mouse_filter = 1
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 3 )
enabled_focus_mode = 0
text = "TRY AGAIN!"

[node name="quit" type="Button" parent="HUD/restart/VBoxContainer"]
margin_top = 143.0
margin_right = 572.0
margin_bottom = 196.0
focus_mode = 0
mouse_filter = 1
custom_fonts/font = SubResource( 5 )
enabled_focus_mode = 0
text = "QUIT GAME"
flat = true

[node name="question" type="Node2D" parent="."]
position = Vector2( -22, -51 )
z_index = 1

[node name="border" type="NinePatchRect" parent="question"]
margin_left = -2.0
margin_top = 11.0
margin_right = 80.0
margin_bottom = 47.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )
patch_margin_left = 20
patch_margin_top = 18
patch_margin_right = 18
patch_margin_bottom = 18
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question text" type="Label" parent="question/border"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -33.0
margin_top = -7.0
margin_right = 99.0
margin_bottom = 20.0
rect_scale = Vector2( 0.5, 0.5 )
size_flags_horizontal = 4
custom_fonts/font = SubResource( 46 )
text = "a community of the mind"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question 2" type="Node2D" parent="."]
position = Vector2( -26, -99 )
z_index = 1

[node name="border" type="NinePatchRect" parent="question 2"]
margin_right = 82.0
margin_bottom = 36.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )
patch_margin_left = 20
patch_margin_top = 18
patch_margin_right = 18
patch_margin_bottom = 18
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question text" type="Label" parent="question 2/border"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -33.0
margin_top = -10.0
margin_right = 99.0
margin_bottom = 32.0
rect_scale = Vector2( 0.5, 0.5 )
size_flags_horizontal = 4
custom_fonts/font = SubResource( 46 )
text = "members only"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question 6" type="Node2D" parent="."]
position = Vector2( 36.9176, -67.3472 )
z_index = 1

[node name="border" type="NinePatchRect" parent="question 6"]
margin_right = 82.0
margin_bottom = 36.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )
patch_margin_left = 20
patch_margin_top = 18
patch_margin_right = 18
patch_margin_bottom = 18
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question text" type="Label" parent="question 6/border"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -33.0
margin_top = -10.0
margin_right = 99.0
margin_bottom = 28.0
rect_scale = Vector2( 0.5, 0.5 )
size_flags_horizontal = 4
custom_fonts/font = SubResource( 46 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question 3" type="Node2D" parent="."]
position = Vector2( -17, -230 )
z_index = 1

[node name="border" type="NinePatchRect" parent="question 3"]
margin_left = -19.0
margin_top = -8.0
margin_right = 63.0
margin_bottom = 28.0
texture = ExtResource( 5 )
patch_margin_left = 20
patch_margin_top = 18
patch_margin_right = 18
patch_margin_bottom = 18
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question text" type="Label" parent="question 3/border"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -33.0
margin_top = -10.0
margin_right = 99.0
margin_bottom = 32.0
rect_scale = Vector2( 0.5, 0.5 )
size_flags_horizontal = 4
custom_fonts/font = SubResource( 46 )
text = "academic integrity?"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question 4" type="Node2D" parent="."]
position = Vector2( -129, -207 )
z_index = 1

[node name="border" type="NinePatchRect" parent="question 4"]
margin_right = 82.0
margin_bottom = 36.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )
patch_margin_left = 20
patch_margin_top = 18
patch_margin_right = 18
patch_margin_bottom = 18
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question text" type="Label" parent="question 4/border"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -33.0
margin_top = -10.0
margin_right = 99.0
margin_bottom = 32.0
rect_scale = Vector2( 0.5, 0.5 )
size_flags_horizontal = 4
custom_fonts/font = SubResource( 46 )
text = "it's everyone's responsibility"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question 5" type="Node2D" parent="."]
position = Vector2( 89, -207 )
z_index = 1

[node name="border" type="NinePatchRect" parent="question 5"]
margin_right = 82.0
margin_bottom = 36.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )
patch_margin_left = 20
patch_margin_top = 18
patch_margin_right = 18
patch_margin_bottom = 18
__meta__ = {
"_edit_use_anchors_": false
}

[node name="question text" type="Label" parent="question 5/border"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -33.0
margin_top = -10.0
margin_right = 99.0
margin_bottom = 32.0
rect_scale = Vector2( 0.5, 0.5 )
size_flags_horizontal = 4
custom_fonts/font = SubResource( 46 )
text = "depends on your academic tradition"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sort" type="YSort" parent="."]

[node name="spawner" type="Position2D" parent="sort"]
position = Vector2( 4, 22 )

[node name="wall tiles" type="TileMap" parent="sort"]
position = Vector2( 7.62939e-06, 0 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 10, 10 )
show_collision = true
format = 1
tile_data = PoolIntArray( -1507334, 74, 0, -1507333, 48, 0, -1507332, 48, 0, -1507331, 48, 0, -1507330, 48, 0, -1507329, 48, 0, -1572864, 48, 0, -1572863, 48, 0, -1572862, 48, 0, -1572861, 48, 0, -1572860, 48, 0, -1572859, 49, 0, -1572858, 54, 0, -1441798, 48, 0, -1441797, 48, 0, -1441796, 48, 0, -1441795, 48, 0, -1441794, 48, 0, -1441793, 48, 0, -1507328, 48, 0, -1507327, 48, 0, -1507326, 48, 0, -1507325, 48, 0, -1507324, 48, 0, -1507323, 48, 0, -1507322, 48, 0, -1376262, 48, 0, -1376261, 48, 0, -1376260, 48, 0, -1376259, 48, 0, -1376258, 48, 0, -1376257, 48, 0, -1441792, 48, 0, -1441791, 48, 0, -1441790, 48, 0, -1441789, 48, 0, -1441788, 48, 0, -1441787, 48, 0, -1441786, 48, 0, -1310737, 48, 0, -1310736, 48, 0, -1310735, 48, 0, -1310734, 48, 0, -1310733, 48, 0, -1310732, 48, 0, -1310731, 48, 0, -1310730, 48, 0, -1310729, 48, 0, -1310728, 48, 0, -1310727, 48, 0, -1310726, 49, 0, -1310725, 49, 0, -1310724, 49, 0, -1310723, 49, 0, -1310722, 49, 0, -1310721, 49, 0, -1376256, 49, 0, -1376255, 49, 0, -1376254, 49, 0, -1376253, 49, 0, -1376252, 49, 0, -1376251, 49, 0, -1376250, 49, 0, -1376249, 48, 0, -1376248, 48, 0, -1376247, 48, 0, -1376246, 48, 0, -1376245, 48, 0, -1376244, 48, 0, -1376243, 48, 0, -1376242, 48, 0, -1376241, 49, 0, -1376240, 49, 0, -1376239, 49, 0, -1376238, 49, 0, -1376237, 49, 0, -1376236, 49, 0, -1245201, 49, 0, -1245200, 49, 0, -1245199, 49, 0, -1245198, 49, 0, -1245197, 49, 0, -1245196, 49, 0, -1245195, 49, 0, -1245194, 49, 0, -1245193, 49, 0, -1245192, 49, 0, -1245191, 49, 0, -1245190, 49, 0, -1310714, 49, 0, -1310713, 49, 0, -1310712, 49, 0, -1310711, 49, 0, -1310710, 49, 0, -1310709, 49, 0, -1310708, 49, 0, -1310707, 49, 0, -1310706, 49, 0, -1310705, 49, 0, -1310704, 49, 0, -1310703, 49, 0, -1310702, 49, 0, -1310701, 49, 0, -1310700, 49, 0, -1179665, 49, 0, -1245164, 49, 0, -1179628, 49, 0, -1048593, 49, 0, -1048592, 49, 0, -1048591, 49, 0, -1048590, 49, 0, -1048589, 49, 0, -1048588, 49, 0, -1048587, 49, 0, -1048586, 49, 0, -1048585, 49, 0, -1048584, 49, 0, -1048583, 49, 0, -1048582, 49, 0, -1114106, 49, 0, -1114105, 49, 0, -1114104, 49, 0, -1114103, 49, 0, -1114102, 49, 0, -1114101, 49, 0, -1114100, 49, 0, -1114099, 49, 0, -1114098, 49, 0, -1114092, 49, 0, -983046, 49, 0, -983045, 49, 0, -983044, 49, 0, -983043, 49, 0, -1048573, 49, 0, -1048572, 49, 0, -1048571, 49, 0, -1048570, 49, 0, -1048562, 49, 0, -1048556, 49, 0, -917507, 49, 0, -983037, 49, 0, -983026, 49, 0, -983020, 49, 0, -851971, 49, 0, -917501, 49, 0, -917490, 49, 0, -917489, 49, 0, -917488, 49, 0, -917487, 49, 0, -917486, 49, 0, -917485, 49, 0, -917484, 49, 0, -786435, 49, 0, -851965, 49, 0, -720899, 49, 0, -655363, 49, 0, -720893, 49, 0, -589827, 49, 0, -589826, 49, 0, -589825, 49, 0, -655360, 47, 0, -655359, 49, 0, -655357, 49, 0, -524291, 47, 0, -524290, 47, 0, -524289, 47, 0, -589824, 47, 0, -589823, 47, 0, -589821, 47, 0, -196612, 79, 0, -196611, 79, 0, -196610, 79, 0, -196609, 79, 0, -262144, 79, 0, -262143, 79, 0, -262142, 87, 0, -262141, 79, 0, -131076, 49, 0, -131075, 49, 0, -131074, 49, 0, -131073, 49, 0, -196608, 49, 0, -196607, 49, 0, -196605, 49, 0, -65540, 49, 0, -131069, 49, 0, -4, 49, 0, -65533, 49, 0, 65532, 47, 0, 65533, 47, 0, 3, 49, 0, 131069, 47, 0, 65539, 49, 0, 196605, 47, 0, 131074, 161, 0, 131075, 47, 0, 262141, 47, 0, 262142, 47, 0, 262143, 47, 0, 196608, 114, 0, 196609, 47, 0, 196610, 47, 0, 196611, 47, 0 )

[node name="props" type="TileMap" parent="sort"]
position = Vector2( 7.62939e-06, 0 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 10, 10 )
show_collision = true
format = 1
tile_data = PoolIntArray( -1114097, 32, 0, -1114096, 30, 0, -65538, 158, 0, -65537, 155, 0, -131072, 157, 0, -3, 154, 0 )

[node name="spikes" type="TileMap" parent="sort" groups=[
"spikes",
]]
position = Vector2( 7.62939e-06, 0 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 10, 10 )
show_collision = true
format = 1
tile_data = PoolIntArray( -1048561, 18, 0, -1048560, 18, 0, -1048559, 18, 0, -1048558, 18, 0, -1048557, 18, 0, -983025, 17, 0, -983024, 17, 0, -983023, 17, 0, -983022, 17, 0, -983021, 17, 0, -65538, 158, 0, -65537, 155, 0, -131072, 157, 0, -3, 154, 0 )

[node name="doors" type="TileMap" parent="sort"]
position = Vector2( 7.62939e-06, 0 )
z_index = 3
tile_set = ExtResource( 2 )
cell_size = Vector2( 10, 10 )
show_collision = true
format = 1
tile_data = PoolIntArray( -655358, 49, 0, -589822, 115, 0 )

[node name="exit" type="Area2D" parent="sort"]
position = Vector2( 0, 22 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="sort/exit"]
position = Vector2( 125, -385 )
shape = SubResource( 47 )

[node name="bookcase" type="RigidBody2D" parent="."]
position = Vector2( 25, -25 )
z_index = 1
mode = 2
mass = 50.0
gravity_scale = 0.0
linear_damp = 100.0
angular_damp = 100.0

[node name="bookcase" type="Sprite" parent="bookcase"]
position = Vector2( 7.62939e-06, 0 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bookcase"]
shape = SubResource( 48 )

[node name="trap" type="Area2D" parent="."]
position = Vector2( 160.038, -179.902 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="trap"]
position = Vector2( -1.03802, -0.0983582 )
shape = SubResource( 49 )

[node name="spikies" type="RigidBody2D" parent="."]
position = Vector2( 155, -185 )
rotation = -3.14159
collision_layer = 4
mode = 2
gravity_scale = 0.0
continuous_cd = 2
contact_monitor = true
can_sleep = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="spikies"]
shape = SubResource( 50 )

[node name="spike2" type="Sprite" parent="spikies"]
texture = ExtResource( 8 )

[node name="Area2D" type="Area2D" parent="spikies"]
position = Vector2( -1.90735e-06, 4.76837e-07 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="spikies/Area2D"]
position = Vector2( 7.62939e-06, -9.53674e-07 )
shape = SubResource( 51 )

[connection signal="pressed" from="HUD/restart/VBoxContainer/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="HUD/restart/VBoxContainer/quit" to="." method="_on_quit_pressed"]
[connection signal="body_entered" from="trap" to="." method="_on_trap_body_entered"]
[connection signal="body_entered" from="spikies" to="." method="_on_spikies_body_entered"]
[connection signal="body_entered" from="spikies/Area2D" to="." method="_on_Area2D_body_entered"]
